[package]
name = "slurmactiond"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4" # HTTP / web framework
awc = { version = "3", features = ["openssl"] } # HTTP client implementation used by actix-web
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5" # for config files
log = { version = "0.4", features = ["serde"] }
env_logger = "0.9"
derive_more = "0.99"
regex = "1"
hmac = "0.12" # for verifying webhook signatures
sha2 = "0.10"
hex = "0.4" # for decoding SHA256 signatures
futures-util = "0.3" # dependency of awc required for traversing streams
tokio = { version = "1.18", features = ["process", "macros"] } # for async IPC
clap = { version = "3", features = ["derive"] } # argument parsing

[profile.release]
opt-level = "s"
strip = true
panic = "abort"
lto = true