[package]
name = "slurmactiond"
version = "0.1.0"
description = "Schedule GitHub Actions jobs through SLURM"
authors = ["Distributed and Parallel Systems Group, University of Innsbruck, Austria"]
repository = "https://github.com/celerity/slurmactiond"
readme = "README.md"
license = "MIT"
keywords = ["slurm", "github", "github-actions", "ci"]
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["macros"], default-features = false } # HTTP / web framework
actix-files = "0.6" # for serving static files
awc = { version = "3", features = ["openssl", "compress-gzip"], default-features = false } # HTTP client implementation used by actix-web
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5" # for config files
log = { version = "0.4", features = ["serde"] }
env_logger = "0.9"
regex = "1"
hmac = "0.12" # for verifying webhook signatures
sha2 = "0.10"
hex = "0.4" # for decoding SHA256 signatures
futures-util = "0.3" # dependency of awc required for traversing streams
tokio = { version = "1.18", features = ["process", "macros", "time"] } # for async IPC
clap = { version = "3", features = ["derive"] } # argument parsing
thiserror = "1.0" # derive(Error) for inspectable errors
anyhow = "1.0" # type-erased errors
nix = "0.25" # gethostname, getuid, kill, isatty (for detecting interactive vs service)
tera = { version = "1", default-features = false } # HTML template rendering
chrono = "0.4" # convert state change times to ISO 8601

[dev-dependencies]
tempfile = "3" # for testing file_io

[profile.release]
opt-level = "s"
strip = true
panic = "abort"
lto = true
